--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ before_script:
   - pwd
   - mkdir -p $PROJECT_NAMESPACE
   - ln -s $(pwd) $PROJECT_NAMESPACE
+  - ls -l $PROJECT_NAMESPACE
   - cd $PROJECT_NAMESPACE/$CI_PROJECT_NAME
   - ls -l
   - go get
