--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,13 @@
 image: golang
 
 variables:
-  PROJECT_NAMESPACE: "/go/src/git.teamwork.net/$CI_NAMESPACE"
+  PROJECT_PATH: "/go/src/git.teamwork.net/$CI_PROJECT_PATH"
 
 before_script:
-  - pwd
-  - mkdir -p $PROJECT_NAMESPACE
-  - ln -s $(pwd) $PROJECT_NAMESPACE
-  - cd $PROJECT_NAMESPACE/$CI_PROJECT_NAME
-  - ls -l
+  - mkdir -p $PROJECT_PATH
+  - cp -R * $PROJECT_PATH
+  - cd $PROJECT_PATH
   - go get
-  - make setup
-  - ls -l
-  - make update
-  - ls -l
 
 
 build:
