--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,10 @@ before_script:
   - mkdir -p $PROJECT_PATH
   - cp -R * $PROJECT_PATH
   - cd $PROJECT_PATH
+  - rm -R /builds/$CI_PROJECT_PATH
+  - ln -s $PROJECT_PATH /builds/$CI_PROJECT_NAMESPACE
+  - cd /builds/$CI_PROJECT_PATH
+  - ls -l
   - go get
 
 
