add list of build folder

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ build:
     - make install-home
     - make package-setup
     - make package
+    - find build -exec ls -ld {} \;
   tags:
     - go
 
